# vcam_zygisk

./: .gitignore  build.gradle  build_native.sh
.github/workflows/: build-zygisk.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/native/: vcam_hook.cpp  vcam_inject.c
app/src/main/java/com/example/vcam/: FrameScaler.java  MainActivity.java  PreviewActivity.java  SystemHookManager.java  VCamConfig.java  VideoToFrames.java
app/src/main/res/layout/: activity_main.xml  activity_preview.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rMO/: strings.xml
vcam_hal/: CMakeLists.txt  FrameProvider.cpp  FrameProvider.h  VcamCameraDevice.cpp  VcamCameraDevice.h  VcamCameraProvider.cpp  VcamCameraProvider.h  VcamCameraSession.cpp  VcamCameraSession.h  VcamConfig.cpp  VcamConfig.h  build_hal.sh  vcam_daemon_main.cpp
vcam_module/: customize.sh  module.prop  post-fs-data.sh  service.sh
zygisk_module/: customize.sh  module.prop  post-fs-data.sh  service.sh
zygisk_module/zygisk/: Android.mk  Application.mk  CMakeLists.txt  build.sh  main.cpp  zygisk.hpp
